--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             fontFamily: {
               serif: ['Playfair Display', 'serif'],
               sans: ['Inter', 'sans-serif'],
+              montserrat: ['Montserrat', 'sans-serif'],
             }
           }
         }
