--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           extend: {
             fontFamily: {
               serif: ['Playfair Display', 'serif'],
-              sans: ['Inter', 'sans-serif'],
+              // sans: ['Inter', 'sans-serif'],
               montserrat: ['Montserrat', 'sans-serif'],
             }
           }
